Ensure we keep baseline-java-versions behaviour