@@ -38,6 +38,7 @@ import org.gradle.api.Action;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
+import org.gradle.api.Transformer;
 import org.gradle.api.UnknownTaskException;
 import org.gradle.api.artifacts.ConfigurationContainer;
 import org.gradle.api.file.ConfigurableFileCollection;
@@ -403,8 +404,25 @@ public abstract class BaselineModuleJvmArgs implements Plugin<Project> {
 
         public static CommandLineArgumentProvider fromJustExtensionForCompilation(Task task) {
             ModuleJvmArgsArgumentProvider argumentProvider = create(task);
-            argumentProvider.getExports().addAll(extension(task).exports());
-            argumentProvider.getExports().addAll(extension(task).opens());
+
+            // javac isn't provided `--add-exports` args for the time being due to
+            // https://github.com/gradle/gradle/issues/18824
+            // However, we set sourceCompatibility in BaselineJavaVersion to opt out of the '--release' flag.
+            Transformer<Set<String>, Set<String>> handleJavaVersionsNotBeingApplied = inputs -> {
+                if (!task.getProject().getPlugins().hasPlugin(BaselineJavaVersion.class)) {
+                    log.debug(
+                            "BaselineModuleJvmArgs not applying args to compilation task {} due to lack of "
+                                    + "BaselineJavaVersion",
+                            task.getPath());
+                    return Set.of();
+                }
+
+                return inputs;
+            };
+
+            argumentProvider.getExports().addAll(extension(task).exports().map(handleJavaVersionsNotBeingApplied));
+            argumentProvider.getExports().addAll(extension(task).opens().map(handleJavaVersionsNotBeingApplied));
+
             return argumentProvider;
         }
 
